wip calcite request in dim analysis